# reducibility_checker

./: .gitignore  .gitmodules  CMakeLists.txt  LICENSE  README.md  check_reducibility.hpp  coloring.cpp  coloring.hpp  cubic_conf.hpp  duality.hpp  edge_kempes.hpp  feasibles.hpp  generate_colors.hpp  generate_kempes.hpp  main.cpp  preload.sh  testall.sh
